--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body    {
     align-items: center;
     grid-gap: 10px;
     grid-template-columns: 500px;
-    margin: 0px; */
+    margin: 0px;
     padding-top: 2vh;
 }
 
