--- a/style.css
+++ b/style.css
@@ -43,14 +43,7 @@ body    {
 } */
 
 /*CSS pentru cover red zone*/
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 10vh;
-    background: #658BA1;
-    color: white;
-}
+
 
 .grid-wrapper {
     display: grid;
@@ -139,9 +132,19 @@ input[type=submit]:hover {
   background-color: #45a049;
 }
 
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 10vh;
+  background: #658BA1;
+  color: white;
+}
+
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #658BA1;
   padding: 20px;
 }
 
