--- a/style.css
+++ b/style.css
@@ -141,7 +141,7 @@ input[type=submit]:hover {
 
 .container {
   border-radius: 5px;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   padding: 20px;
 }
 
